# modyn

./: .clang-format  .clang-tidy  .coverage.viktors-macbook-air.home.45361.533800  .coverage.viktors-macbook-air.home.89621.189205  .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  4.4  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ReproduceBug.md  _typos.toml  black.toml  codecov.yml  compilance_check.sh  compliance_check.sh  create_selection_heatmap.py  criteo_dlrm.yaml  default_postgresql.conf  dev-requirements.txt  dispatcher.py  docker-compose.yml  docker-compose_exp.yml  docker_alive.py  env_container1.yml  environment.yml  extract_data.py  feature_spec.yaml  initial_setup.sh  llmfiltering.py  metadata_postgresql.conf  mnist.yaml  notes.md  prefetch0.yml  prefetch1.yml  (+19 more)
modyn/: CMakeLists.txt  __init__.py  cmake.sh  docker-compose-dev.yml  docker-compose.yml  run_tests.sh
modyn/NewStorage/: .clang-format  CMakeLists.txt  init-submodules.md  modyn-new-storage
modyn/NewStorage/cmake/: dependencies.cmake  system_info.cmake
modyn/NewStorage/include/: Storage.hpp  storage.hpp
modyn/NewStorage/scripts/: clang-tidy.sh
modyn/NewStorage/src/: CMakeLists.txt  Storage.cpp  Storage.h  Storage.hpp  main.cpp  storage.cpp
modyn/NewStorage/test/: .clang-tidy  CMakeLists.txt  Storage-test.cpp  TestUtils.cpp  TestUtils.hpp  Utils.cpp  Utils.hpp  test_utils.cpp  test_utils.hpp
modyn/NewStorage/tst/: CMakeLists.txt  Storage-test.cpp  Utils.h
modyn/backend/: Dockerfile  requirements.txt  run.sh
modyn/backend/metadata/: metadata.py  metadata_pb2.py  metadata_pb2.pyi  metadata_pb2_grpc.py  metadata_server.py
modyn/backend/metadata_database/: __init__.py  metadata_base.py  metadata_database.py  metadata_database_connection.py  metadata_database_server.py  metadata_entrypoint.py  metadata_pb2.py  metadata_pb2.pyi  metadata_pb2_grpc.py
modyn/backend/metadata_processor/: README.md  __init__.py  metadata_processor.py  metadata_processor_entrypoint.py  metadata_processor_strategy.py  modyn-metadata-processor
modyn/backend/odm/: __init__.py  odm.py  odm_pb2.py  odm_pb2.pyi  odm_pb2_grpc.py  odm_server.py
modyn/backend/ptmp/: __init__.py  ptmp_pb2.py  ptmp_pb2.pyi  ptmp_pb2_grpc.py  ptmp_server.py
modyn/backend/selector/: __init__.py  base_selector.py  gdumb_selector.py  mock_selector_server.py  modyn-selector  new_data_selector.py  score_selector.py  selector.py  selector_entrypoint.py  selector_pb2.py  selector_pb2.pyi  selector_pb2_grpc.py  selector_server.py  selector_strategy.py
modyn/backend/supervisor/: README.md  __init__.py  entrypoint.py  modyn-supervisor  supervisor.py
modyn/common/: CMakeLists.txt  __init__.py
modyn/common-cpp/: CMakeLists.txt
modyn/common/benchmark/: __init__.py  stopwatch.py
modyn/common/cpp/: CMakeLists.txt
modyn/common/example_extension/: CMakeLists.txt  README.md  __init__.py  example_extension.py
modyn/common/ftp/: __init__.py  ftp_server.py  ftp_utils.py
modyn/common/grpc/: __init__.py  grpc_helpers.py
modyn/common/local_storage_backend/: __init__.py  local_storage_backend.py
modyn/common/trigger_sample/: CMakeLists.txt  __init__.py  trigger_sample_storage.py  utils.py
modyn/common/trigger_storage_cpp/: CMakeLists.txt  __init__.py  trigger_storage_cpp.py  utils.py
modyn/config/: README.md  __init__.py  config.yaml  example-pipeline.yaml  pipeline-schema.yaml
modyn/config/examples/: example-pipeline.yaml  modyn_config.yaml  modyn_config_default.yaml  modyn_config_save.yaml  modyn_config_simple.yaml  modyn_config_template.yaml
modyn/config/schema/: __init__.py  base_model.py  config.py  downsampling_config.py  modyn_config_schema.yaml  pipeline-schema.yaml  pipeline.py
modyn/const/: regex.py  types.py
modyn/custom_lr_schedulers/: __init__.py
modyn/custom_lr_schedulers/dlrm_lr_scheduler/: __init__.py  dlrm_scheduler.py
modyn/database/: __init__.py  abstract_database_connection.py  partition_by_meta.py
modyn/evaluator/: __init__.py  evaluator.py  evaluator_entrypoint.py  main.py  modyn-evaluator
modyn/evaluator/internal/: core_evaluation.py  metric_factory.py  metric_manager.py  pytorch_evaluator.py  pytorch_lighttuner.py
modyn/frontend/: Dockerfile  README.md  requirements.txt
modyn/frontend/dynamicdatasets/: __init__.py
modyn/gpu_node/: Dockerfile  README.md  requirements.txt  run.sh
modyn/gpu_node/data/: __init__.py  cifar_dataset.py  mnist_dataset.py  online_dataset.py  utils.py
modyn/metadata_database/: __init__.py  metadata_base.py  metadata_database_connection.py
modyn/metadata_processor/: README.md  __init__.py  main.py  metadata_processor.py  metadata_processor_entrypoint.py  modyn-metadata-processor
modyn/model_storage/: __init__.py  main.py  model_storage.py  model_storage_entrypoint.py  modyn-model-storage
modyn/models/: README.md  __init__.py  base_model.py  base_trainer.py  coreset_methods_support.py  modyn_model.py  resnet18.py
modyn/models/GPT2/: GPT2.py  (+2 more)
modyn/playground/: CMakeLists.txt  playground.cpp
modyn/protos/: README.md  evaluator.proto  metadata.proto  metadata_processor.proto  model_storage.proto  ptmp.proto  selector.proto  storage.proto  supervisor.proto  trainer_server.proto
modyn/selector/: CMakeLists.txt  __init__.py  main.py  modyn-selector  selector.py  selector_entrypoint.py
modyn/storage/: .clang-tidy  CMakeLists.txt  Dockerfile  README.md  __init__.py  data_sourcer.py  entrypoint.py  mock_storage_server.py  modyn-new-storage  modyn-storage  playground.cpp  requirements.txt  run.sh  storage.py  storage_entrypoint.py  storage_pb2.py  storage_pb2.pyi  storage_pb2_grpc.py  storage_server.py
modyn/supervisor/: README.md  __init__.py  entrypoint.py  main.py  modyn-supervisor  supervisor.py
modyn/tests/: .clang-tidy  CMakeCache.txt  CMakeLists.txt  conftest.py  cpp_test_main.cpp
modyn/trainer_server/: Dockerfile  README.md  __init__.py  entrypoint.py  main.py  modyn-trainer-server  run.sh  trainer_server.py  trainer_server_entrypoint.py
modyn/utils/: __init__.py  logging.py  startup.py  timer.py  utils.py
(+2569 files in other folders)
